--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script>
           var socket = io.connect('/');
           socket.on('ring', function (data) {
-            console.log('ring!');
+            console.log(data);
             var sound = $("#bell")[0];
             sound.load();
             sound.play();
